--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
-    "google-maps-react": "^2.0.6",
+    "firebase": "^9.20.0",
+    "google-maps-react": "2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
