--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.20.0",
     "google-maps-react": "2.0.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.10.0",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
